--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "async-scripts-loader",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "async-scripts-loader package loads bunch of js files in async way and handles when all the given files are loaded. It returns Promise. Handled \"onload\" and \"onerror\" states.",
-  "main": "index.js",
+  "main": "dist/async-scripts-loader.js",
+  "module": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/webpack && karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,13 @@
   "bugs": {
     "url": "https://github.com/vbabak/async-scripts-loader/issues"
   },
-  "homepage": "https://github.com/vbabak/async-scripts-loader#readme"
+  "homepage": "https://github.com/vbabak/async-scripts-loader#readme",
+  "devDependencies": {
+    "jasmine-core": "^3.5.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^2.0.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
+  }
 }
